@@ -5,7 +5,8 @@ cli : new : preserve file attributes
 cli : new : added zstdless and zstdgrep tools
 cli : fixed : status displays total amount decoded, even for file consisting of multiple frames (like pzstd)
 cli : fixed : zstdcat
-library : changed : only public ZSTD_ symbols are now exposed
+lib : changed : only public ZSTD_ symbols are now exposed
+lib : fixed : soname
 API : changed : zbuff prototypes now generate deprecation warnings
 API : changed : streaming decompression implicit reset on starting new frame
 API : added experimental : dictID retrieval functions
